--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "concurrently": "^4.1.2",
     "express": "^4.17.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
@@ -14,8 +15,7 @@
   },
   "scripts": {
     "start": "node server",
-    "builddev": "react-scripts build && nodemon server",
-    "rundev": "react-scripts start",
+    "dev": "concurrently 'nodemon server' 'react-scripts start'",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +39,6 @@
     "babel-eslint": "^10.0.2",
     "eslint": "^6.2.0",
     "eslint-plugin-react": "^7.14.3"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
